zapata-agentforce/force-app/main/default/objects/Sucursal__c/fields/Abre_Domingo__c.field-meta.xml
<CustomField>
    <fullName>Abre_Domingo__c</fullName>
    <description>Ninguna agencia abre domingo hoy. Se deja parametrizable en vez de quemar la regla en el codigo.</description>
    <label>Abre domingo</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>