zapata-agentforce/force-app/main/default/objects/Sucursal__c/fields/Activa__c.field-meta.xml
<CustomField>
    <fullName>Activa__c</fullName>
    <description>Solo las sucursales activas se ofrecen al agendar.</description>
    <label>Activa</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>