zapata-agentforce/force-app/main/default/objects/Sucursal__c/fields/Anticipacion_Minima_Horas__c.field-meta.xml
<CustomField>
    <fullName>Anticipacion_Minima_Horas__c</fullName>
    <description>Zapata pide agendar con al menos 24 horas de anticipacion. Consultar_Disponibilidad no debe ofrecer franjas por debajo de este umbral.</description>
    <label>Anticipacion minima (horas)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>