zapata-agentforce/force-app/main/default/objects/Sucursal__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <description>Ciudad del taller. Se muestra al usuario al ofrecer opciones.</description>
    <label>Ciudad</label>
    <length>80</length>
    <type>Text</type>
</CustomField>