zapata-agentforce/force-app/main/default/objects/Sucursal__c/fields/Codigo_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Sucursal__c</fullName>
    <description>Codigo estable de negocio. Usado como clave de carga de datos semilla.</description>
    <label>Codigo de sucursal</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>