zapata-agentforce/force-app/main/default/objects/Sucursal__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <description>Direccion fisica del taller. No se muestra ID interno al usuario.</description>
    <label>Direccion</label>
    <type>TextArea</type>
</CustomField>