zapata-agentforce/force-app/main/default/objects/Sucursal__c/fields/Horario_Atencion__c.field-meta.xml
<CustomField>
    <fullName>Horario_Atencion__c</fullName>
    <description>Horario visible, por ejemplo Lunes a viernes 8:00-18:00.</description>
    <label>Horario de atencion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>