zapata-agentforce/force-app/main/default/objects/Sucursal__c/fields/Horario_Sabado__c.field-meta.xml
<CustomField>
    <fullName>Horario_Sabado__c</fullName>
    <description>El sabado tiene horario reducido y cierra antes. Se separa porque la agenda no puede ofrecer las mismas franjas que entre semana.</description>
    <label>Horario sabado</label>
    <length>60</length>
    <type>Text</type>
</CustomField>