zapata-agentforce/force-app/main/default/objects/Sucursal__c/fields/Id_Agencia_Web__c.field-meta.xml
<CustomField>
    <fullName>Id_Agencia_Web__c</fullName>
    <description>Identificador real de la agencia en zapata.com.mx (96 a 104 para Freightliner). Es la llave para integrar con su formulario de citas cuando se conecte de verdad.</description>
    <label>Id de agencia en el sitio</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>