zapata-agentforce/force-app/main/default/objects/Sucursal__c/fields/Marca_Principal__c.field-meta.xml
<CustomField>
    <fullName>Marca_Principal__c</fullName>
    <description>Linea principal que atiende la agencia. Una misma direccion puede operar varias marcas con horarios distintos.</description>
    <label>Marca principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Freightliner</fullName>
                    <default>true</default>
                    <label>Freightliner</label>
                </value>
                <value>
                    <fullName>Mercedes-Benz Autobuses</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz Vanes</fullName>
                </value>
                <value>
                    <fullName>Great Dane</fullName>
                </value>
                <value>
                    <fullName>Ford</fullName>
                </value>
                <value>
                    <fullName>Nissan</fullName>
                </value>
                <value>
                    <fullName>Mazda</fullName>
                </value>
                <value>
                    <fullName>JAC</fullName>
                </value>
                <value>
                    <fullName>Lincoln</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>