zapata-agentforce/force-app/main/default/objects/Sucursal__c/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <description>Quien responde por este taller. Destino natural del escalamiento.</description>
    <label>Responsable</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sucursales a cargo</relationshipLabel>
    <relationshipName>Sucursales_A_Cargo</relationshipName>
    <type>Lookup</type>
</CustomField>