zapata-agentforce/force-app/main/default/objects/Sucursal__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <description>Contacto del taller que el agente puede compartir con el usuario.</description>
    <label>Telefono</label>
    <length>20</length>
    <type>Text</type>
</CustomField>