zapata-agentforce/force-app/main/default/objects/Sucursal__c/fields/Zona_Horaria__c.field-meta.xml
<CustomField>
    <fullName>Zona_Horaria__c</fullName>
    <description>Zona horaria IANA usada para calcular las franjas locales.</description>
    <label>Zona horaria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>America/Mexico_City</fullName>
                    <default>true</default>
                    <label>America/Mexico_City</label>
                </value>
                <value>
                    <fullName>America/Monterrey</fullName>
                </value>
                <value>
                    <fullName>America/Tijuana</fullName>
                </value>
                <value>
                    <fullName>America/Cancun</fullName>
                </value>
                <value>
                    <fullName>America/Hermosillo</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>