zapata-agentforce/force-app/main/default/objects/Sucursal__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Ciudad__c</columns>
    <columns>Activa__c</columns>
    <columns>Zona_Horaria__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>